# qq-music-mcp

./: .env.example  LICENSE  README.md  pyproject.toml
src/qq_music_api/: __init__.py  api.py  client.py  config.py  main.py  models.py  server.py
